feat: Added route authentication
