# docs/swagger.json
@@ -1,8 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server for a Swagger API with Gin.",
+        "title": "Gin Swagger Example API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8083",
+    "basePath": "/api",
     "paths": {
         "/": {
             "get": {
@@ -62,9 +67,14 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "object",
-                                            "additionalProperties": true
+                                        " data": {
+                                            "$ref": "#/definitions/models.LoginResponse"
+                                        },
+                                        " message": {
+                                            "type": "string"
+                                        },
+                                        "code": {
+                                            "type": "integer"
                                         }
                                     }
                                 }
@@ -130,9 +140,14 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "object",
-                                            "additionalProperties": true
+                                        " data": {
+                                            "$ref": "#/definitions/models.RefreshTokenResponse"
+                                        },
+                                        " message": {
+                                            "type": "string"
+                                        },
+                                        "code": {
+                                            "type": "integer"
                                         }
                                     }
                                 }
@@ -198,9 +213,14 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "data": {
-                                            "type": "object",
-                                            "additionalProperties": true
+                                        " data": {
+                                            "type": "object"
+                                        },
+                                        " message": {
+                                            "type": "string"
+                                        },
+                                        "code": {
+                                            "type": "integer"
                                         }
                                     }
                                 }
@@ -230,9 +250,94 @@
                     }
                 }
             }
+        },
+        "/user/profile": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        " data": {
+                                            "$ref": "#/definitions/models.ProfileResponse"
+                                        },
+                                        " message": {
+                                            "type": "string"
+                                        },
+                                        "code": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.UserResponse"
+                }
+            }
+        },
+        "models.ProfileResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "uid": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RefreshTokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UserLoginForm": {
             "type": "object",
             "required": [
@@ -282,6 +387,17 @@
                 }
             }
         },
+        "models.UserResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "utils.Response": {
             "type": "object",
             "properties": {
@@ -297,6 +413,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
